# Custom-Logger

./: .clang-format  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/log4cxx/: CMakeLists.txt
src/: CMakeLists.txt
src/Exceptions/include/: exceptions.h
src/Logger/: CMakeLists.txt  LogManager.cpp  Logger.cpp  Utils.cpp
src/Logger/include/: LogManager.h  Logger.h  Utils.h
src/Tests/: CMakeLists.txt  main.cpp
src/Tests/config/: file.log.xml
